--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
 
         <script src="components/jquery/jquery.min.js"></script>
         <script src="scripts/vendor/twitter.js"></script>
+        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script src="scripts/vendor/jquery.gmap.min.js"></script>
 
     </head>
     <body ng-app="trippingIronmanApp">
