--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,8 @@
                         <ul class="social-icons">
                             <li class="facebook"><a href="#">Facebook</a></li>
                             <li class="twitter"><a href="#">Twitter</a></li>
-                            <li class="dribbble"><a href="#">Dribbble</a></li>
-                            <li class="linkedin"><a href="#">LinkedIn</a></li>
+                            <li class="googleplus"><a href="#">Google Plus</a></li>
+                            <li class="youtube"><a href="#">Youtube</a></li>
                             <li class="pintrest"><a href="#">Pintrest</a></li>
                         </ul>
 
