Added localstorage adapter

--- a/app/index.html
+++ b/app/index.html
@@ -239,6 +239,7 @@
         <script src="scripts/vendor/flexslider.js"></script>
         <script src="scripts/vendor/custom.js"></script>
         <script src="components/lawnchair/src/Lawnchair.js"></script>
+        <script src="components/lawnchair/src/adapters/dom.js"></script>
 
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/app.js"></script>
